--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>AiChat</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <script src="script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
