--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="https://raw.githubusercontent.com/X-Dny/AiChat/refs/heads/main/site.webmanifest">
         <script src="script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script src="https://js.puter.com/v2/"></script>
