--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </svg>
                 <p>GPT4o-Mini</p>
             </button>
+            <button id="app-menu">
+                <svg width="25px" height="25px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 6H20M4 12H20M4 18H20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+            </button>
         </header>
         <h1 id="welcome-msg">Hi, How Can I Help You Today?</h1>
         <div id="blur-screen" onclick="modelPopupSwitch()" style="display: none;"></div>
